<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/txt_input"
            android:textColor="@color/green_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/angka_pertama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:hint="@string/input_angka1" />

        <EditText
            android:id="@+id/angka_kedua"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:hint="@string/input_angka2" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/tambah"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/btn_tambah"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/kurang"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/btn_kurang"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/bagi"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/btn_bagi"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/kali"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:text="@string/btn_kali"
                    android:textSize="30sp" />

            </TableRow>

            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:backgroundTint="@color/gray_light"
                android:text="@string/btn_clear"
                android:textColor="@color/black" />
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/txt_result"
            android:textColor="@color/green_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/empty"
            android:textColor="@color/green_dark"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>